<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.jboss</groupId>
      <artifactId>jboss-parent</artifactId>
      <version>19</version>
   </parent>

   <groupId>org.jboss.forge.addon</groupId>
   <artifactId>gradle-parent</artifactId>
   <version>3.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Forge - Gradle Addon Parent</name>

   <modules>
      <module>api</module>
      <module>impl</module>
      <module>impl-projects</module>
      <module>addon</module>
      <module>tests</module>
   </modules>

   <repositories>
      <repository>
         <id>Gradle Repository</id>
         <url>http://repo.gradle.org/gradle/libs-releases-local/</url>
      </repository>
   </repositories>

   <properties>
      <version.forge>3.9.1.Final</version.forge>
      <version.furnace>2.28.2.Final</version.furnace>
      <maven.compiler.target>1.8</maven.compiler.target>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
      <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
   </properties>

   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>org.jboss.forge.addon</groupId>
            <artifactId>gradle</artifactId>
            <classifier>forge-addon</classifier>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>org.jboss.forge.addon</groupId>
            <artifactId>gradle-api</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>org.jboss.forge.addon</groupId>
            <artifactId>gradle-impl</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>org.jboss.forge.addon</groupId>
            <artifactId>gradle-impl-projects</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>org.jboss.forge</groupId>
            <artifactId>forge-bom</artifactId>
            <version>${version.forge}</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>

         <!-- Gradle dependencies -->
         <dependency>
            <groupId>org.gradle</groupId>
            <artifactId>gradle-tooling-api</artifactId>
            <version>4.10</version>
         </dependency>
         <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy</artifactId>
            <version>2.1.5</version>
         </dependency>
      </dependencies>
   </dependencyManagement>
   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=160m</argLine>
            </configuration>
         </plugin>
      </plugins>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.jboss.forge.furnace</groupId>
               <artifactId>furnace-maven-plugin</artifactId>
               <version>${version.furnace}</version>
            </plugin>
         </plugins>
      </pluginManagement>
   </build>
   <dependencies>
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.11</version>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <scm>
      <connection>scm:git:git@github.com:forge/addon-gradle.git</connection>
      <developerConnection>scm:git:git@github.com:forge/addon-gradle.git</developerConnection>
      <url>http://github.com/forge/addon-gradle</url>
      <tag>HEAD</tag>
   </scm>

</project>
